IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type2.src
.IPPcode19
CALL GF@tadi
